[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ejecutable/Juego/HUD/HUD 6 Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Menus/Comunes/Boton Menu principal.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Ejecutable/Global/Fuentes/04B_30__.TTF"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.752941, 0.0862745, 0.0862745, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_blend = true

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Ejecutable/Global/Fuentes/04B_30__.TTF"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="Pause" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Pause" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Pause"

[node name="Pause-PopUp" type="Panel" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 5 )

[node name="Boton Menu principal" parent="Pause-PopUp" instance=ExtResource( 2 )]
margin_left = 9.0
margin_top = 60.0
margin_right = 49.0
margin_bottom = 100.0
script = null

[node name="Continue" type="Button" parent="Pause-PopUp"]
margin_left = 15.0
margin_top = 15.0
margin_right = 73.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Pause-PopUp/Boton Menu principal/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Pause-PopUp/Continue" to="." method="_on_Continue_pressed"]

[editable path="Pause-PopUp/Boton Menu principal"]
